--- a/Laboratorio2P3/src/main/webapp/WEB-INF/web.xml
+++ b/Laboratorio2P3/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,12 @@
   	<description></description>
   	<servlet-class>com.laboratorio2p3.controladores.ControllerClientes</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>ControllerProveedores</servlet-name>
+  	<display-name>ControllerProveedores</display-name>
+  	<description></description>
+  	<servlet-class>com.laboratorio2p3.controladores.ControllerProveedores</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>ControllerAcceso</servlet-name>
   	<url-pattern>/ControllerAcceso</url-pattern>
@@ -23,6 +29,10 @@
   <servlet-mapping>
   	<servlet-name>ControllerClientes</servlet-name>
   	<url-pattern>/ControllerClientes</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ControllerProveedores</servlet-name>
+  	<url-pattern>/ControllerProveedores</url-pattern>
   </servlet-mapping>
   
   
